# Auto-Language-Switch

./: .gitignore  LICENSE  README.md  build-extension.ps1
docs/: ARCHITECTURE.md  PLAN.md  PRD.md  注释类型.md
native-sidecar/: Cargo.toml
native-sidecar/src/: main.rs
vscode-extension/: .vscodeignore  build-sidecar.js  package-lock.json  package.json
vscode-extension/src/: extension.ts  sidecar.ts
